Added milestone 1 deliverables
Added a way to download the Milestone 1 Powerpoint and a link to the Milestone 1 Presentation

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <ul>
   <li><a href="index.html">Research Paper</a></li><br>
-  <li><a href="index.html">Power Point</a></li><br>
-  <li><a href="index.html">Presentation</a></li><br>  
+  <li><a href="Presentations\Milestone 1 Report.pptx">Milestone 1 Power Point</a></li><br>
+  <li><a href="https://www.youtube.com/watch?v=7Jz17MLQU14">Presentation</a></li><br>  
   <br><p>
    
 </ul>  
