--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 
 
 <ul>
-  <li><a href="index.html">Research Paper</a></li><br>
-  <li><a href="Presentations\Milestone 1 Report.pptx">Milestone 1 Power Point</a></li><br>
-  <li><a href="https://www.youtube.com/watch?v=7Jz17MLQU14">Presentation</a></li><br>  
+  <li><a href="Deliverables/Research Paper.docx">Research Paper</a></li><br>
+  <li><a href="Deliverables/Milestone 1 Report.pptx">Milestone 1 Power Point</a></li><br>
+  <li><a href="https://www.youtube.com/watch?v=7Jz17MLQU14">Milestone 1 Presentation</a></li><br>  
+  <li><a href="Deliverables/Milestone 2 Report.pptx">Milestone 2 Power Point</a></li><br>
+  <li><a href="https://www.youtube.com/watch?v=PpsfvJpngu8">Milestone 2 Presentation</a></li><br>  
   <br><p>
    
 </ul>  
