Updated for Milestone 3

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <li><a href="https://www.youtube.com/watch?v=7Jz17MLQU14">Milestone 1 Presentation</a></li><br>  
   <li><a href="Deliverables/Milestone 2 Report.pptx">Milestone 2 Power Point</a></li><br>
   <li><a href="https://www.youtube.com/watch?v=PpsfvJpngu8">Milestone 2 Presentation</a></li><br>  
+  <li><a href="Deliverables/Milestone 3 Report.pptx">Milestone 3 Power Point</a></li><br>
+  <li><a href="https://www.youtube.com/watch?v=kfvOMqFIriM">Milestone 3 Presentation</a></li><br>  
   <br><p>
    
 </ul>  
